--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -170,6 +170,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <GridView
+            android:id="@+id/recyclerView"
             android:layout_width="368dp"
             android:layout_height="292dp"
             android:layout_marginTop="8dp"
