--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -80,11 +80,10 @@
         android:id="@+id/registerSpinner"
         android:layout_width="234dp"
         android:layout_height="37dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/custom_spinner_background"
+        app:layout_constraintEnd_toEndOf="@+id/registerUsername"
+        app:layout_constraintStart_toStartOf="@+id/registerUsername"
         app:layout_constraintTop_toBottomOf="@+id/registerUsername" />
 
 </android.support.constraint.ConstraintLayout>
