--- a/app/src/main/res/layout/activity_make_post.xml
+++ b/app/src/main/res/layout/activity_make_post.xml
@@ -70,8 +70,8 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/input_outline"
         android:clickable="true"
+        android:hint="@string/Location"
         android:padding="15dp"
-        android:text="@string/Location"
         app:layout_constraintBottom_toTopOf="@+id/makePostButton"
         app:layout_constraintEnd_toEndOf="@+id/makePostFeeling"
         app:layout_constraintStart_toStartOf="@+id/makePostFeeling"
