Changed db structure, for search branch

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -125,7 +125,7 @@
             app:layout_constraintTop_toTopOf="@+id/profileEmailIcon" />
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
+            android:id="@+id/friend_image"
             android:layout_width="175dp"
             android:layout_height="175dp"
             android:layout_marginStart="8dp"
@@ -145,7 +145,7 @@
             android:layout_marginTop="32dp"
             android:src="@drawable/ic_person_white_24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+            app:layout_constraintTop_toBottomOf="@+id/friend_image" />
 
         <ImageView
             android:id="@+id/profileLogout"
@@ -153,10 +153,10 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:src="@drawable/ic_exit_to_app_white_24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+            app:layout_constraintBottom_toBottomOf="@+id/friend_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/profile_image"
+            app:layout_constraintStart_toEndOf="@+id/friend_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.135" />
 
