--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -2,11 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/profileMain_layout"
+    android:id="@+id/friendMain_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ProfileFragment"
+    tools:context=".friendProfile"
     tools:layout_editor_absoluteY="81dp">
 
     <android.support.constraint.ConstraintLayout
@@ -69,20 +69,6 @@
             app:layout_constraintTop_toTopOf="@+id/friendCountryIcon" />
 
         <ImageView
-            android:id="@+id/profileEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            android:src="@drawable/ic_settings_white_24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/profileLogout"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/profileLogout"
-            app:layout_constraintTop_toBottomOf="@+id/profileLogout"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <ImageView
             android:id="@+id/friendCountryIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,7 +81,7 @@
             app:layout_constraintTop_toBottomOf="@+id/friendEmailIcon" />
 
         <TextView
-            android:id="@+id/profileProfession"
+            android:id="@+id/friendProfession"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -147,29 +133,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/friend_profile_image" />
 
-        <ImageView
-            android:id="@+id/profileLogout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@drawable/ic_exit_to_app_white_24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/friend_profile_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/friend_profile_image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.135" />
-
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/profileThird_layout"
+        android:id="@+id/friendThird_layout"
         android:layout_width="match_parent"
         android:layout_height="308dp"
         app:layout_constraintTop_toBottomOf="@+id/friendSecondaryLayout">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/profileRecyclerView"
+            android:id="@+id/friendRecyclerView"
             android:layout_width="380dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
